qr functionality added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+#  flutter_face_detection: 0.1.0
+  firebase_ml_vision: 0.11.0
+  firebase_core: 1.0.1
+  image_picker: 0.7.0
+#  camerax: 0.0.3
+  camera: 0.8.0
+  tflite: 1.1.1
+  qr_flutter: ^4.0.0
+  qr_code_scanner: 0.3.5
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +54,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+#  assets:
+#    - assets/labels.txt
+#    - assets/imageRecognitionModel.tflite
+    #- images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
