--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-#  flutter_face_detection: 0.1.0
   firebase_ml_vision: 0.11.0
   firebase_core: 1.0.1
   image_picker: 0.7.0
-#  camerax: 0.0.3
-  camera: 0.8.0
-  tflite: 1.1.1
   qr_flutter: ^4.0.0
   qr_code_scanner: 0.3.5
+  http: ^0.13.1
+  tflite_flutter: ^0.5.0
+  camera: ^0.5.8+5
+  path_provider:
+  path:
+  image:
 
 dev_dependencies:
   flutter_test:
