--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: face_n_qr_recognition
-description: A new Flutter application.
+name: FaceNetAuthentication
+description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,18 +27,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  firebase_ml_vision: 0.11.0
-  firebase_core: 1.0.1
-  image_picker: 0.7.0
-  qr_flutter: ^4.0.0
-  qr_code_scanner: 0.3.5
-  http: ^0.13.1
+  cupertino_icons: ^0.1.3
   tflite_flutter: ^0.5.0
   camera: ^0.5.8+5
   path_provider:
   path:
+  qr_flutter: ^4.0.0
+  qr_code_scanner: 0.3.5
+  firebase_ml_vision: ^0.9.6+2
   image:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
@@ -56,10 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - assets/labels.txt
-#    - assets/imageRecognitionModel.tflite
-    #- images/a_dot_burr.jpeg
+  assets:
+    - assets/mobilefacenet.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
